Better LegacyDependencyResolverTest.